--- a/HL7MessageGenerator/App.config
+++ b/HL7MessageGenerator/App.config
@@ -2,12 +2,12 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="HL7MessageGenerator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-            <section name="HL7MessageGenerator.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="HL7Tester.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="HL7Tester.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <HL7MessageGenerator.Properties.Settings>
+        <HL7Tester.Properties.Settings>
             <setting name="LastIpAddress" serializeAs="String">
                 <value />
             </setting>
@@ -20,14 +20,14 @@
             <setting name="AutoUpdateCheck" serializeAs="String">
                 <value>False</value>
             </setting>
-        </HL7MessageGenerator.Properties.Settings>
-        <HL7MessageGenerator.Settings1>
+        </HL7Tester.Properties.Settings>
+        <HL7Tester.Settings1>
             <setting name="LastIpAddress" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastPort" serializeAs="String">
                 <value>0</value>
             </setting>
-        </HL7MessageGenerator.Settings1>
+        </HL7Tester.Settings1>
     </userSettings>
 </configuration>
