Preparation for future improvements and adding insurance to keep the right settings page opened

--- a/HL7MessageGenerator/App.config
+++ b/HL7MessageGenerator/App.config
@@ -20,6 +20,18 @@
             <setting name="AutoUpdateCheck" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LastIpAddress2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort3" serializeAs="String">
+                <value />
+            </setting>
         </HL7Tester.Properties.Settings>
         <HL7Tester.Settings1>
             <setting name="LastIpAddress" serializeAs="String">
