Adding IP+Port History

--- a/HL7MessageGenerator/App.config
+++ b/HL7MessageGenerator/App.config
@@ -32,6 +32,18 @@
             <setting name="LastPort3" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastIpAddress4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort5" serializeAs="String">
+                <value />
+            </setting>
         </HL7Tester.Properties.Settings>
         <HL7Tester.Settings1>
             <setting name="LastIpAddress" serializeAs="String">
