Adding 5 more last IP + Port to reach 10

--- a/HL7MessageGenerator/App.config
+++ b/HL7MessageGenerator/App.config
@@ -8,28 +8,22 @@
     </configSections>
     <userSettings>
         <HL7Tester.Properties.Settings>
-            <setting name="LastIpAddress" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LastPort" serializeAs="String">
-                <value />
-            </setting>
             <setting name="LastUpgradeVersion" serializeAs="String">
                 <value>Profile="(Default)"</value>
             </setting>
             <setting name="AutoUpdateCheck" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LastIpAddress" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress1" serializeAs="String">
+                <value />
+            </setting>
             <setting name="LastIpAddress2" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastIpAddress3" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LastPort2" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LastPort3" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastIpAddress4" serializeAs="String">
@@ -38,10 +32,46 @@
             <setting name="LastIpAddress5" serializeAs="String">
                 <value />
             </setting>
+            <setting name="LastIpAddress6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastIpAddress9" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort3" serializeAs="String">
+                <value />
+            </setting>
             <setting name="LastPort4" serializeAs="String">
                 <value />
             </setting>
             <setting name="LastPort5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort6" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort7" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort8" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastPort9" serializeAs="String">
                 <value />
             </setting>
         </HL7Tester.Properties.Settings>
